--- a/src/components/cardGroup/cardGroup.scss
+++ b/src/components/cardGroup/cardGroup.scss
@@ -1,6 +1,3 @@
-.character-card-group {
-    margin-top: 128px;
-}
 .character-card {
     min-height: 240px;
     padding: 10px;
