--- a/src/components/searchBar/searchBar.scss
+++ b/src/components/searchBar/searchBar.scss
@@ -1,22 +1,16 @@
-.container {
-    position: fixed;
-    z-index: 10;
-    top: 24px;
-    width: 90%;
-}
-
 .search-container {
-    border-radius: 16px 16px 16px 16px ;
+    position: fixed;
+    z-index: 4;
+    top: 24px;
+    left: 20%;
+    right: 20%;
+    width: auto;
+    border-radius: 16px;
     background-color: white;
     box-shadow: 0 0 32px rgba(0, 0, 0, 0.14);
-    max-width: 720px;
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
+
     .input {
-        width: 80%;
         height: 52px;
-        margin-left: 10%;
-        margin-right: 10%;
+        margin: auto 10% ;
     }
 }
